[package]
name = "timestamp"
version = "0.2.0"
edition = "2021"
authors = ["Nicolas Menard <nicolas.p.menard@gmail.com>"]
resolver = "2"
rust-version = "1.75"

[target.'cfg(not(target_os = "espidf"))'.dependencies]
sysinfo = "0.30.12"
micro-rdk = {version = "0.2.6", path = "../mini-rdk/micro-rdk", features = ["native"]}
rand = "0.8.5"
[target.'cfg(target_os = "espidf")'.dependencies]
sysinfo = "0.30.12"
micro-rdk = {version = "0.2.6", path = "../mini-rdk/micro-rdk", features = ["esp32"]}

[dependencies]
log = "0.4"
base64 = "0.21.0"

[package.metadata.com.viam]
module = true
